# tensor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tensor/: core.py  fdm.py  math.py
tests/: test_neuralnet.py  test_tensor.py
