
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor"
version = "0.0.1"
description = ""
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy"
]

[tools.setuptools.packages.find]
where = ["src"]
include = ["tensor*"]
exclude = ["tensor.tests*"]

